# ewoksjob

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
doc/: bliss.rst  conf.py  explanations.rst  getting_started.rst  howtoguides.rst  index.rst  reference.rst  routing.rst  slurm.rst  tutorials.rst
doc/explanations/: index.rst  routing.rst
doc/howtoguides/: index.rst  slurm.rst
doc/howtos/: index.rst  slurm.rst
doc/reference/: api.rst  cli.rst  index.rst
doc/tutorials/: configuration.rst  getting_started.rst  index.rst  installation.rst  jobs.rst
ewoksbliss/apps/: ewoks.py
ewoksbliss/events/: handlers.py  reader.py
ewoksbliss/tests/: conftest.py  test_events.py  test_feedback.py
ewoksjob/: client.py  utils.py
ewoksjob/apps/: ewoks.py
ewoksjob/client/: test_workflow.py
ewoksjob/events/: handlers.py
ewoksjob/tests/: conftest.py  test_cancel.py  test_convert.py  test_events.py  test_feedback.py  test_future.py  test_futures.py  test_job.py  test_submit.py  test_task_discovery.py
examples/: celeryconfig.py  celeryconfig.yaml  example_with_events.py  hello_world.py  job.py  monitor.sh  worker.sh
scripts/: celery.md  celeryconfig_redis.py  celeryconfig_redis.yaml  celeryconfig_sql.py  config.sh  example_with_events.py  hello_world.py  hello_world_cancel.py  hello_world_fail.py  hello_world_ppf.py  hello_world_ppf_cancel.py  hello_world_ppf_fail.py  monitor.sh  runjobs.sh  worker.sh
src/ewoksjob/: __main__.py  config.py
(+47 files in other folders)
