[metadata]
name = ewoksbliss
version = attr: ewoksbliss.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = Utilities for Ewoks workflows in Bliss
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/workflow/ewoks/ewoksbliss/
project_urls = 
    Source = https://gitlab.esrf.fr/workflow/ewoks/ewoksbliss/
    Documantion = https://workflow.gitlab-pages.esrf.fr/ewoksapps/ewoksbliss/
    Tracker = https://gitlab.esrf.fr/workflow/ewoks/ewoksbliss/issues/
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    ewoks

[options.extras_require]
test =
    pytest
    pytest-redis
dev =
    %(test)s
    black
    flake8
doc =
    %(test)s
    sphinx

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

[build_sphinx]
project = ewoksbliss
version = attr: ewoksbliss.__version__
source-dir = ./doc

[coverage:run]
omit =
    setup.py
    ewoksbliss/tests/*

[tool:pytest]
redis_exec = redis-server
